[package]
name = "trr"
version = "0.1.0"
authors = ["Noah Hsu"]
edition = "2021"
description = "Tree command written in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "trr"
path = "src/main.rs"

[dependencies]
clap = {version = "3.1.18",features = ["derive"]}
colored = "2"
is_executable = "1.0.1"